tests/miniJava/neg/005866_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { 0 System.out.println ( { } ) ; } }
